# ssis_validator

./: .travis.yml  LICENSE  README.md  environment.yml  mypy.ini  pyproject.toml  ssis_validator.py  test_ssis_validator.py
mypy_stubs/lxml/: cssselect.pyi  etree.pyi  objectify.pyi
ssis_validator/: __init__.py  __main__.py  ssis_validator.py
tests/: test_ssis_validator.py
