[tool.poetry]
name = "ssis_validator"
version = "0.1.0"
description = ""
authors = ["Mike Hosseini <mahdihosseini75@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.1"
lxml = "^4.4"
gitpython = "^3.0"
crayons = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
isort = "^4.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
flake8 = "^3.7"
mypy = "^0.730.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
